# OpenGL_project

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/res/shaders/: Basic.shader
